--- a/css/styles.css
+++ b/css/styles.css
@@ -9,12 +9,14 @@ body {
   border: 0;
   padding-top: 0;
   border-radius: 0;
+  opacity: .9;
 }
 
 .navbar-brand {
     margin-top: 4px;
     margin-bottom: 4px;
-    color: rgba(250, 235, 215, 0.797);
+    color: rgba(255, 255, 255, 0.797);
+    font-size: 1.6em;
 }
 
 
